fix: overlay z-index

--- a/src/App.scss
+++ b/src/App.scss
@@ -45,7 +45,6 @@ body {
 
 	height: -webkit-fill-available;
 	overflow-y: auto;
-	-webkit-overflow-scrolling: touch; /* enables “momentum” (smooth) scrolling */
 }
 
 .layout {
